# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
.sqlx/: query-0564db5971613829c94c4711204938c3172422560cb28fbad7a40d992760be7e.json  query-0b04d288bd0745730f072c42ca46ae7e0fa6737922f5afd822dd42c8881df735.json  query-13787a1704a223e010de18185ea48498012c1221f15a43a65b5309b995297b0e.json  query-1b718b30fb1733ac09eef9d78455635e65da8e36cbe80443ebd20b1b6e6ed7b7.json  query-5a095ff88925f8f78d65141c6c3ffdf7f395b2186aba46fff3bfc86ed4ab3814.json  query-76a4068cab536408611c6d2506e7ac5e2b574c93821e2680405fe8a3b8609121.json  query-bc436d82df41027d348d53d4a6f2b5a2a261c87cf481faf702f446ea83914fda.json  query-bf77779b3ca42a4313e295f492219f65d6c245a7927758eac560d293a41dcff6.json  query-d049bc0c7acd702056de373921ae1cb9c8f51dbf7024d61a5ea5ad20672f6c60.json  query-d1fb3c51742d56cae7a82c6c3d186c2c1bc422f31f31c53a9280b87ee0474183.json  query-e5550a9aee746bdf50022375fec002b53598b47adab5c98941b958126f985350.json
configuration/: base.ron  local.ron  production.ron
migrations/: 20240809203501_create_subscription_tokens_table.sql  20240813164438_create_users_table.sql  20240818195023_seed_user.sql  20240820234308_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
