[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["migrate", "chrono", "uuid", "postgres", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }


