[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.0", features = ["redis-session-rustls"] }
actix-web = "4.9.0"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = "0.4.38"
claims = "0.7.1"
config = { version = "0.14.0", default-features = false, features = ["ron"] }
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.1", features = [
    "migrate",
    "chrono",
    "uuid",
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = "0.18.1"
wiremock = "0.6.1"
